--- a/Redmask.Taghelpers/Redmask.Taghelpers.csproj
+++ b/Redmask.Taghelpers/Redmask.Taghelpers.csproj
@@ -3,11 +3,19 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
-    <Authors>Iman Sobhaniyan</Authors>
-    <Company>Ighan</Company>
-    <Product>WebUI</Product>
+    <Authors>Redmask.ir</Authors>
+    <Company>Redmask.ir</Company>
+    <Product>Redmask.Taghelpers</Product>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>2.4.2</Version>
+    <Version>1.0.0.9</Version>
+    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageIcon>favicon.png</PackageIcon>
+    <PackageIconUrl />
+    <PackageTags>mvc_net5,taghelpers,tinymce5,persianCalendarPicker,front-end</PackageTags>
+    <RepositoryUrl>https://github.com/vahidarya14/Redmask.Taghelpers</RepositoryUrl>
+    <Description>some usefull taghelpers such as
+ tinymc5 + roxyfilenam , persian calendar picker , image chooser dialog(instead of file input) , social share btn</Description>
   </PropertyGroup>
 
   <ItemGroup>
@@ -27,6 +35,13 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\favicon.png">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 
