--- a/Web.Test/Web.Test.csproj
+++ b/Web.Test/Web.Test.csproj
@@ -6,10 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="6.0.2" />
     <PackageReference Include="Microsoft.DependencyValidation.Analyzers" Version="0.11.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="wwwroot\_content\Redmask.Taghelpers\" />
     <Folder Include="wwwroot\_files\Temp\" />
     <Folder Include="wwwroot\_files\uploadimages\" />
   </ItemGroup>
