--- a/src/Redmask.Taghelpers/Redmask.Taghelpers.csproj
+++ b/src/Redmask.Taghelpers/Redmask.Taghelpers.csproj
@@ -18,6 +18,7 @@
  tinymc5 + roxyfilenam , persian calendar picker , image chooser dialog(instead of file input) , social share btn</Description>
     <GenerateEmbeddedFilesManifest>true</GenerateEmbeddedFilesManifest>
     <EnableDefaultContentItems>false</EnableDefaultContentItems>
+    <PackageReadmeFile>ReadMe.md</PackageReadmeFile>
 
   </PropertyGroup>
 
@@ -69,5 +70,14 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\lib\bootstrap5\" />
+  </ItemGroup>
+
+ 
+
+  <ItemGroup>
+    <None Include="..\..\ReadMe.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
   </ItemGroup>
 </Project>
